# realworld-python-fastapi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
real_world/models/: article.py  base.py  comment.py  tag.py  user.py
