[tool.poetry]
name = "real_world"
version = "0.1.0"
description = "Medium.com clone (called Conduit) built with FastAPI  https://realworld.io/"
authors = ["Zanfer322 <edupugantiarun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.54.1"}
sqlalchemy = "^1.3.16"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
isort = "^4.3.21"
pylint = "^2.5.0"
flake8 = "^3.7.9"
sqlalchemy-stubs = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
